@@ -94,25 +94,6 @@
 
     <profiles>
         <profile>
-            <id>jdk9</id>
-            <activation>
-                <jdk>[1.9,</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <!-- JDK9 disallow attaching new agent to the current VM by default: https://bugs.openjdk.java.net/browse/JDK-8180425 -->
-                            <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
             <id>skip-jar</id>
             <build>
                 <plugins>
